fix saving of multiline text

BUG:295042