plugins/artistictextshape/ArtisticTextShape.cpp
@@ -1001,16 +1001,9 @@ bool ArtisticTextShape::saveSvg(SvgSavingContext &context)
 
     // check if we are set on a path
     if (layout() == ArtisticTextShape::Straight) {
-        QTransform m = transformation();
-        if (m.type() == QTransform::TxTranslate) {
-            const QPointF pos = position();
-            context.shapeWriter().addAttributePt("x", pos.x() + anchorOffset);
-            context.shapeWriter().addAttributePt("y", pos.y() + baselineOffset());
-        } else {
-            context.shapeWriter().addAttributePt("x", anchorOffset);
-            context.shapeWriter().addAttributePt("y", baselineOffset());
-            context.shapeWriter().addAttribute("transform", SvgUtil::transformToString(transformation()));
-        }
+        context.shapeWriter().addAttributePt("x", anchorOffset);
+        context.shapeWriter().addAttributePt("y", baselineOffset());
+        context.shapeWriter().addAttribute("transform", SvgUtil::transformToString(transformation()));
         foreach(const ArtisticTextRange &range, formattedText) {
             saveSvgTextRange(range, context, !hasSingleRange, baselineOffset());
         }
